# Reinventing-the-Wheel

./: .gitmodules  .travis.yml  README.md
src/control/dwa/: CMakeLists.txt  package.xml
src/control/dwa/include/dwa/: dwa.h
src/control/dwa/launch/: dwa.launch
src/control/dwa/src/: dwa.cpp  dwa_node.cpp
src/control/fail_safe_manager/: CMakeLists.txt  package.xml
src/control/fail_safe_manager/include/fail_safe_manager/: fail_safe_manager.h
src/control/fail_safe_manager/launch/: fail_safe_manager.launch
src/control/fail_safe_manager/src/: fail_safe_manager.cpp  fail_safe_manager_node.cpp
src/control/pure_pursuit/: CMakeLists.txt  package.xml
src/control/pure_pursuit/include/pure_pursuit/: pure_pursuit.h
src/control/pure_pursuit/launch/: pure_pursuit.launch
src/control/pure_pursuit/src/: pure_pursuit.cpp  pure_pursuit_node.cpp
src/control/whill_interface/: CMakeLists.txt
src/data/graph/: sample.dot
src/perception/localization/approximate_voxel_filter/: CMakeLists.txt  package.xml
src/perception/localization/approximate_voxel_filter/include/approximate_voxel_filter/: approximate_voxel_filter.h
src/perception/localization/approximate_voxel_filter/launch/: approximate_voxel_filter.launch
src/perception/localization/approximate_voxel_filter/src/: approximate_voxel_filter.cpp  approximate_voxel_filter_node.cpp
src/perception/localization/dummy_localizer/: CMakeLists.txt  package.xml
src/perception/localization/dummy_localizer/include/dummy_localizer/: dummy_localizer.h
src/perception/localization/dummy_localizer/launch/: dummy_localizer.launch
src/perception/localization/dummy_localizer/src/: dummy_localizer.cpp  dummy_localizer_node.cpp
src/perception/localization/lidar_localizer/: CMakeLists.txt
src/perception/localization/lidar_localizer/nodes/ndt_matching/: ndt_matching.cpp
src/perception/localization/ndt_matching/: CMakeLists.txt  package.xml
src/perception/localization/ndt_matching/include/ndt_matching/: ndt_matching.h
src/perception/localization/ndt_matching/launch/: ndt_matching.launch  test.launch
src/perception/localization/ndt_matching/src/: ndt_matching.cpp  ndt_matching_node.cpp
src/perception/localization/points_map_loader/: CMakeLists.txt  package.xml
src/perception/localization/points_map_loader/include/points_map_loader/: points_map_loader.h
src/perception/localization/points_map_loader/launch/: points_map_loader.launch
src/perception/localization/points_map_loader/src/: points_map_loader.cpp  points_map_loader_node.cpp
src/planning/checkpoint_manager/: CMakeLists.txt  package.xml
src/planning/checkpoint_manager/include/checkpoint_manager/: checkpoint_manager.h
src/planning/checkpoint_manager/launch/: checkpoint_manager.launch
src/planning/checkpoint_manager/src/: checkpoint_manager.cpp  checkpoint_manager_node.cpp
src/planning/checkpoint_saver/: CMakeLists.txt  package.xml
src/planning/checkpoint_saver/include/checkpoint_saver/: checkpoint_saver.h
src/planning/checkpoint_saver/launch/: checkpoint_saver.launch
src/planning/checkpoint_saver/src/: checkpoint_saver.cpp  checkpoint_saver_node.cpp
src/planning/dijkstra_planner/: CMakeLists.txt  package.xml
src/planning/dijkstra_planner/include/dijkstra_planner/: dijkstra_planner.h
src/planning/dijkstra_planner/launch/: dijkstra_planner.launch
src/planning/dijkstra_planner/src/: dijkstra_planner.cpp  dijkstra_planner_node.cpp
src/planning/grid_map/grid_map_demos/: CMakeLists.txt  package.xml
src/planning/grid_map/grid_map_demos/include/grid_map_demos/: ImageToGridmapDemo.hpp
src/planning/grid_map/grid_map_demos/src/: ImageToGridmapDemo.cpp  image_to_gridmap_demo_node.cpp
src/planning/localmap_2d/: CMakeLists.txt  package.xml
src/planning/localmap_2d/config/: localmap_2d.yaml
src/planning/localmap_2d/include/localmap_2d/: localmap_2d.h
src/planning/localmap_2d/launch/: localmap_2d.launch
src/planning/localmap_2d/src/: localmap_2d.cpp  localmap_2d_node.cpp
src/planning/mission_planner/: CMakeLists.txt  package.xml
src/planning/mission_planner/include/mission_planner/: mission_planner.h
src/planning/mission_planner/launch/: mission_planner.launch
src/planning/mission_planner/src/: mission_planner.cpp  mission_planner_node.cpp
src/planning/waypoint_follow_of_wall/: CMakeLists.txt  package.xml
src/planning/waypoint_follow_of_wall/include/waypoint_follow_of_wall/: waypoint_follow_of_wall.h
src/planning/waypoint_follow_of_wall/launch/: waypoint_follow_of_wall.launch
src/planning/waypoint_follow_of_wall/src/: waypoint_follow_of_wall.cpp  waypoint_follow_of_wall_node.cpp
src/planning/waypoint_loader/: CMakeLists.txt  package.xml
src/planning/waypoint_loader/include/waypoint_loader/: waypoint_loader.h
src/planning/waypoint_loader/launch/: waypoint_loader.launch
src/planning/waypoint_loader/src/: waypoint_loader.cpp  waypoint_loader_node.cpp
src/planning/waypoint_publisher/: CMakeLists.txt  package.xml
src/planning/waypoint_publisher/include/waypoint_publisher/: waypoint_publisher.h
src/planning/waypoint_publisher/launch/: waypoint_publisher.launch
src/planning/waypoint_publisher/src/: waypoint_publisher.cpp  waypoint_publisher_node.cpp
src/planning/waypoint_saver/: CMakeLists.txt  package.xml
src/planning/waypoint_saver/include/waypoint_saver/: waypoint_saver.h
src/planning/waypoint_saver/launch/: waypoint_saver.launch
src/planning/waypoint_saver/src/: waypoint_saver.cpp  waypoint_saver_node.cpp
src/planning/waypoint_selector/: CMakeLists.txt  package.xml
src/planning/waypoint_selector/include/waypoint_selector/: waypoint_selector.h
src/planning/waypoint_selector/launch/: waypoint_selector.launch
src/planning/waypoint_selector/src/: waypoint_selector.cpp  waypoint_selector_node.cpp
src/util/interface/whill_interface/: CMakeLists.txt
src/util/interface/whill_interface/launch/: whill_interface.launch
src/util/interface/whill_interface/src/: whill_interface_node.cpp
src/util/roomba_interface/: CMakeLists.txt
src/util/roomba_interface/src/: roomba_interface.cpp  roomba_interface_node.cpp
(+94 files in other folders)
