<?xml version="1.0"?>
<package format="2">
  <name>checkpoint_manager</name>
  <version>0.0.0</version>
  <description>The checkpoint_manager package</description>

  <maintainer email="rigel@todo.todo">rigel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>checkpoint_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>jsk_rviz_plugins</build_depend>
  <build_export_depend>checkpoint_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>jsk_rviz_plugins</build_export_depend>
  <exec_depend>checkpoint_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>
</package>
