<?xml version="1.0"?>
<package format="2">
  <name>waypoint_follow_of_wall</name>
  <version>0.0.0</version>
  <description>The waypoint_follow_of_wall package</description>

  <maintainer email="ranka@todo.todo">ranka</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
</package>
